included about me section

--- a/index.html
+++ b/index.html
@@ -97,17 +97,12 @@
                   class="icon"
                 />
                 <h3>Education</h3>
-                <p>B.Sc. Bachelors Degree<br />M.Sc. Masters Degree</p>
+                <p>B.Eng. Software and Biomedical Engineering with Co-op</p>
               </div>
             </div>
             <div class="text-container">
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-                reprehenderit et laborum, rem, dolore eum quod voluptate
-                exercitationem nobis, nihil esse debitis maxime facere minus sint
-                delectus velit in eos quo officiis explicabo deleniti dignissimos.
-                Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-                reiciendis ea magnam? Nulla, impedit fuga!
+                I am in my final year of software and biomedical engineering at McMaster University. As a passionated, goal-oreiented programmer, I am always striving to deliver the best quality of work and build meaningful connections with other team members and clients.
               </p>
             </div>
           </div>
