--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="section__text">
             <p class="section__text__p1">Hello, I'm</p>
             <h1 class="title">James Park</h1>
-            <p class="section__text__p2">Software and Biomedical Engineering Student</p>
+            <p class="section__text__p2">Software and Biomedical<br> Engineering Student</p>
             <div class="btn-container">
                 <button class="btn btn-color-2" 
                 onclick="window.open('./assets/james_park_resume.pdf')">
@@ -88,7 +88,7 @@
                   class="icon"
                 />
                 <h3>Experience</h3>
-                <p>2+ years <br />Frontend Development</p>
+                <p>2+ years <br />Sales Engineer</p>
               </div>
               <div class="details-container">
                 <img
@@ -367,7 +367,7 @@
             </ul>
           </div>
         </nav>
-        <p>Copyright &#169; 2023 John Doe. All Rights Reserved.</p>
+        <p></p>
       </footer>
       <script src="script.js"></script>
     </body>
