--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
       </section>
       <section id="projects">
         <p class="section__text__p1">Browse My Recent</p>
-        <h1 class="title">Projects</h1>
+        <h1 class="title">Projects (In Progress)</h1>
         <div class="experience-details-container">
           <div class="about-containers">
             <div class="details-container color-container">
@@ -344,7 +344,7 @@
               alt="Email icon"
               class="icon contact-icon email-icon"
             />
-            <p><a href="mailto:examplemail@gmail.com">Example@gmail.com</a></p>
+            <p><a href="mailto:jamesparkgh@gmail.com">jamesparkgh@gmail.com</a></p>
           </div>
           <div class="contact-info-container">
             <img
@@ -352,7 +352,7 @@
               alt="LinkedIn icon"
               class="icon contact-icon"
             />
-            <p><a href="https://www.linkedin.com">LinkedIn</a></p>
+            <p><a href="https://www.linkedin.com/in/jamesparkg/">LinkedIn</a></p>
           </div>
         </div>
       </section>
