--- a/index.html
+++ b/index.html
@@ -3,35 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>James Park - Software & Biomedical Engineer</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mediaqueries.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav id="desktop-nav">
         <div class="logo">James Park</div>
-        <div>
+        <div class="nav-right">
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#projects">Project</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
+            <div class="theme-toggle" onclick="toggleTheme()">
+                <div class="toggle-container">
+                    <div class="toggle-slider"></div>
+                    <span class="toggle-icon sun">☀️</span>
+                    <span class="toggle-icon moon">🌙</span>
+                </div>
+            </div>
         </div>
     </nav>
     <nav id="hamburger-nav">
         <div class="logo">James Park</div>
-        <div class="hamburger-menu">
-            <div class="hamburger-icon" onclick="toggleMenu()">
-                <span></span>   
-                <span></span>
-                <span></span>
+        <div class="hamburger-right">
+            <div class="theme-toggle mobile" onclick="toggleTheme()">
+                <div class="toggle-container">
+                    <div class="toggle-slider"></div>
+                    <span class="toggle-icon sun">☀️</span>
+                    <span class="toggle-icon moon">🌙</span>
+                </div>
             </div>
-            <div class="menu-links">
-                <li><a href="#about" onclick="toggleMenu()">About</a></li>
-                <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
-                <li><a href="#projects" onclick="toggleMenu()">Project</a></li>
-                <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
+            <div class="hamburger-menu">
+                <div class="hamburger-icon" onclick="toggleMenu()">
+                    <span></span>   
+                    <span></span>
+                    <span></span>
+                </div>
+                <div class="menu-links">
+                    <li><a href="#about" onclick="toggleMenu()">About</a></li>
+                    <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
+                    <li><a href="#projects" onclick="toggleMenu()">Project</a></li>
+                    <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
+                </div>
             </div>
         </div>
     </nav>
@@ -42,29 +61,24 @@
         <div class="section__text">
             <p class="section__text__p1">Hello, I'm</p>
             <h1 class="title">James Park</h1>
-            <p class="section__text__p2">Software and Biomedical <br> Engineering Student</p>
+            <p class="section__text__p2">Software & Biomedical <br> Engineering Student</p>
             <div class="btn-container">
-                <button class="btn btn-color-2" 
+                <button class="btn btn-primary" 
                 onclick="window.open('./assets/james_park_resume.pdf')">
-                Download CV
+                <span class="btn-text">Download Resume</span>
             </button>
-                <button class="btn btn-color-1" 
+                <button class="btn btn-secondary" 
                 onclick="location.href='./#contact'">
-                Contact Info
+                <span class="btn-text">Contact Me</span>
             </button>
             </div>
             <div id="socials-container">
-                <img 
-                src="./assets/linkedin.png" 
-                alt="My LinkedIn profile"
-                class="icon" 
-                onclick="location.href='https://www.linkedin.com/in/jamesparkg/'">
-              
-                <img 
-                src="./assets/github.png" 
-                alt="My Github profile"
-                class="icon" 
-                onclick="location.href='https://github.com/JamesParkGH'">
+                <div class="icon" onclick="location.href='https://www.linkedin.com/in/jamesparkg/'">
+                    <img src="./assets/linkedin.png" alt="My LinkedIn profile">
+                </div>
+                <div class="icon" onclick="location.href='https://github.com/JamesParkGH'">
+                    <img src="./assets/github.png" alt="My Github profile">
+                </div>
             </div>
         </div>
     </section>
@@ -102,7 +116,7 @@
             </div>
             <div class="text-container">
               <p>
-                I am in my final year of software and biomedical engineering at McMaster University. As a passionated, goal-oreiented programmer, I am always striving to deliver the best quality of work and build meaningful connections with other team members and clients.
+                I am in my final year of Software and Biomedical Engineering at McMaster University. As a passionate, goal-oriented programmer, I am always striving to deliver the highest quality of work and build meaningful connections with team members and clients.
               </p>
             </div>
           </div>
@@ -191,7 +205,7 @@
               </div>
             </div>
             <div class="details-container">
-              <h2 class="experience-sub-title">Frontend Development</h2>
+              <h2 class="experience-sub-title">Backend Development</h2>
               <div class="article-container">
                 <article>
                   <img
@@ -264,13 +278,13 @@
               <h2 class="experience-sub-title project-title">Project One</h2>
               <div class="btn-container">
                 <button
-                  class="btn btn-color-2 project-btn"
+                  class="btn project-btn"
                   onclick="location.href='https://github.com/'"
                 >
                   Github
                 </button>
                 <button
-                  class="btn btn-color-2 project-btn"
+                  class="btn project-btn"
                   onclick="location.href='https://github.com/'"
                 >
                   Live Demo
@@ -288,13 +302,13 @@
               <h2 class="experience-sub-title project-title">Project Two</h2>
               <div class="btn-container">
                 <button
-                  class="btn btn-color-2 project-btn"
+                  class="btn project-btn"
                   onclick="location.href='https://github.com/'"
                 >
                   Github
                 </button>
                 <button
-                  class="btn btn-color-2 project-btn"
+                  class="btn project-btn"
                   onclick="location.href='https://github.com/'"
                 >
                   Live Demo
@@ -312,13 +326,13 @@
               <h2 class="experience-sub-title project-title">Project Three</h2>
               <div class="btn-container">
                 <button
-                  class="btn btn-color-2 project-btn"
+                  class="btn project-btn"
                   onclick="location.href='https://github.com/'"
                 >
                   Github
                 </button>
                 <button
-                  class="btn btn-color-2 project-btn"
+                  class="btn project-btn"
                   onclick="location.href='https://github.com/'"
                 >
                   Live Demo
@@ -367,7 +381,7 @@
             </ul>
           </div>
         </nav>
-        <p></p>
+        <p>© 2025 James Park. All rights reserved.</p>
       </footer>
       <script src="script.js"></script>
     </body>
