Improved UI and fixed minor bugs

--- a/index.html
+++ b/index.html
@@ -85,51 +85,40 @@
     <section id="about">
         <p class="section__text__p1">Get To Know More</p>
         <h1 class="title">About Me</h1>
-        <div class="section-container">
-          <div class="section__pic-container">
+        <div class="about-content">
+          <div class="about-image">
             <img
               src="./assets/about_james_pic.jpg"
-              alt="Profile picture"
+              alt="James Park - Software Engineer"
               class="about-pic"
             />
           </div>
-          <div class="about-details-container">
-            <div class="about-containers">
-              <div class="details-container">
-                <img
-                  src="./assets/experience.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <h3>Professional Experience</h3>
-                <p>3+ years <br />Software Engineering & AI</p>
+          <div class="about-info">
+            <div class="about-stats">
+              <div class="stat-item">
+                <h3>3+</h3>
+                <p>Years of Professional Experience</p>
               </div>
-              <div class="details-container">
-                <img
-                  src="./assets/education.png"
-                  alt="Education icon"
-                  class="icon"
-                />
-                <h3>Education</h3>
-                <p>B.Eng. Software & Biomedical Engineering<br/>McMaster University</p>
+              <div class="stat-item">
+                <h3>50+</h3>
+                <p>Enterprise Clients Served</p>
               </div>
-              <div class="details-container">
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Certification icon"
-                  class="icon"
-                />
-                <h3>Certifications</h3>
-                <p>Microsoft Azure, Google Analytics<br/>Salesforce Certified</p>
+              <div class="stat-item">
+                <h3>600K+</h3>
+                <p>YouTube Tutorial Views</p>
               </div>
             </div>
-            <div class="text-container">
+            <div class="about-description">
               <p>
-                I am a passionate Software Engineer and AI Coding Expert with a strong background in full-stack development, 
+                I am a passionate <strong>Software Engineer and AI Coding Expert</strong> with expertise in full-stack development, 
                 machine learning, and enterprise solutions. Currently working as an AI Trainer at Outlier, I specialize in 
-                training AI models across multiple programming languages and developing scalable software solutions. 
-                With experience at companies like SOTI Inc. and a fresh B.Eng. from McMaster University, 
-                I bring both technical expertise and practical industry knowledge to every project.
+                training AI models across multiple programming languages and developing scalable software solutions.
+              </p>
+              <p>
+                With a fresh <strong>B.Eng. from McMaster University</strong> and experience at companies like SOTI Inc., 
+                I bring both technical expertise and practical industry knowledge. I'm certified in Microsoft Azure, 
+                Google Analytics, and Salesforce, with a proven track record of reducing deployment times by 200% 
+                and creating solutions that serve thousands of users.
               </p>
             </div>
           </div>
@@ -279,13 +268,7 @@
                     class="btn project-btn"
                     onclick="window.open('https://github.com/JamesParkGH/Virtual_Dragon_Boat_Coach', '_blank')"
                   >
-                    GitHub
-                  </button>
-                  <button
-                    class="btn project-btn"
-                    onclick="window.open('https://github.com/JamesParkGH/Virtual_Dragon_Boat_Coach', '_blank')"
-                  >
-                    Live Demo
+                    View on GitHub
                   </button>
                 </div>
               </div>
@@ -316,13 +299,7 @@
                     class="btn project-btn"
                     onclick="window.open('https://github.com/JamesParkGH/SecureChat', '_blank')"
                   >
-                    GitHub
-                  </button>
-                  <button
-                    class="btn project-btn"
-                    onclick="window.open('https://github.com/JamesParkGH/SecureChat', '_blank')"
-                  >
-                    Live Demo
+                    View on GitHub
                   </button>
                 </div>
               </div>
@@ -352,13 +329,7 @@
                     class="btn project-btn"
                     onclick="window.open('https://github.com/JamesParkGH/Random_Flag_Generator', '_blank')"
                   >
-                    GitHub
-                  </button>
-                  <button
-                    class="btn project-btn"
-                    onclick="window.open('https://github.com/JamesParkGH/Random_Flag_Generator', '_blank')"
-                  >
-                    Live Demo
+                    View on GitHub
                   </button>
                 </div>
               </div>
@@ -388,13 +359,7 @@
                     class="btn project-btn"
                     onclick="window.open('https://github.com/JamesParkGH/AI_ChatBot', '_blank')"
                   >
-                    GitHub
-                  </button>
-                  <button
-                    class="btn project-btn"
-                    onclick="window.open('https://github.com/JamesParkGH/AI_ChatBot', '_blank')"
-                  >
-                    Live Demo
+                    View on GitHub
                   </button>
                 </div>
               </div>
