--- a/index.html
+++ b/index.html
@@ -115,20 +115,39 @@
                 training AI models across multiple programming languages and developing scalable software solutions.
               </p>
               <p>
-                With a fresh <strong>B.Eng. from McMaster University</strong> and experience at companies like SOTI Inc., 
-                I bring both technical expertise and practical industry knowledge. I'm certified in Microsoft Azure, 
-                Google Analytics, and Salesforce, with a proven track record of reducing deployment times by 200% 
-                and creating solutions that serve thousands of users.
+                With a <strong>B.Eng. from McMaster University</strong> and experience at companies like SOTI Inc., 
+                I bring both technical expertise and practical industry knowledge. I have a proven track record of reducing 
+                deployment times by 200% and creating solutions that serve thousands of users worldwide.
               </p>
+            </div>
+            <div class="certifications-section">
+              <h3>Professional Certifications</h3>
+              <div class="certifications-grid">
+                <div class="cert-item">
+                  <div class="cert-icon">🎓</div>
+                  <div class="cert-details">
+                    <h4>Microsoft Azure</h4>
+                    <p>Cloud Solutions</p>
+                  </div>
+                </div>
+                <div class="cert-item">
+                  <div class="cert-icon">📊</div>
+                  <div class="cert-details">
+                    <h4>Google Analytics</h4>
+                    <p>Data Analysis</p>
+                  </div>
+                </div>
+                <div class="cert-item">
+                  <div class="cert-icon">☁️</div>
+                  <div class="cert-details">
+                    <h4>Salesforce</h4>
+                    <p>CRM Solutions</p>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-        <img
-          src="./assets/arrow.png"
-          alt="Arrow icon"
-          class="icon arrow"
-          onclick="location.href='./#experience'"
-        />
       </section>
       <section id="experience">
         <p class="section__text__p1">Explore My</p>
@@ -231,12 +250,6 @@
             </div>
           </div>
         </div>
-        <img
-          src="./assets/arrow.png"
-          alt="Arrow icon"
-          class="icon arrow"
-          onclick="location.href='./#projects'"
-        />
       </section>
       <section id="projects">
         <p class="section__text__p1">Browse My Recent</p>
@@ -364,14 +377,68 @@
                 </div>
               </div>
             </div>
+
+            <div class="project-card">
+              <div class="project-image-container">
+                <div class="project-placeholder">
+                  <h3>📚</h3>
+                  <p>Interview Prep</p>
+                </div>
+              </div>
+              <div class="project-content">
+                <h2 class="project-title">Interview Questions & Study Notes</h2>
+                <p class="project-description">
+                  Comprehensive collection of data structures, algorithms, and software engineering interview 
+                  preparation materials. Features coding challenges, system design concepts, and technical interview guides.
+                </p>
+                <div class="project-tech">
+                  <span class="tech-tag">Data Structures</span>
+                  <span class="tech-tag">Algorithms</span>
+                  <span class="tech-tag">System Design</span>
+                  <span class="tech-tag">Interview Prep</span>
+                </div>
+                <div class="btn-container">
+                  <button
+                    class="btn project-btn"
+                    onclick="window.open('https://github.com/JamesParkGH/Interview_Questions', '_blank')"
+                  >
+                    View on GitHub
+                  </button>
+                </div>
+              </div>
+            </div>
+
+            <div class="project-card">
+              <div class="project-image-container">
+                <div class="project-placeholder">
+                  <h3>🌐</h3>
+                  <p>Portfolio Website</p>
+                </div>
+              </div>
+              <div class="project-content">
+                <h2 class="project-title">Professional Portfolio Website</h2>
+                <p class="project-description">
+                  Modern, responsive portfolio website showcasing professional experience and projects. 
+                  Features dark/light theme toggle, smooth animations, and optimized performance.
+                </p>
+                <div class="project-tech">
+                  <span class="tech-tag">HTML5</span>
+                  <span class="tech-tag">CSS3</span>
+                  <span class="tech-tag">JavaScript</span>
+                  <span class="tech-tag">Responsive Design</span>
+                </div>
+                <div class="btn-container">
+                  <button
+                    class="btn project-btn"
+                    onclick="window.open('https://github.com/JamesParkGH/jamespark_webpage', '_blank')"
+                  >
+                    View on GitHub
+                  </button>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-        <img
-          src="./assets/arrow.png"
-          alt="Arrow icon"
-          class="icon arrow"
-          onclick="location.href='./#contact'"
-        />
       </section>
       <section id="contact">
         <p class="section__text__p1">Get in Touch</p>
