--- a/index.html
+++ b/index.html
@@ -87,9 +87,14 @@
         <div class="about-content">
           <div class="about-image">
             <img
-              src="./assets/about_james_pic.jpg"
+              src="./assets/james_pic1.jpg"
               alt="James Park - Software Engineer"
               class="about-pic"
+            />
+            <img
+              src="./assets/james_pic2.jpg"
+              alt="James Park - AI Expert"
+              class="about-pic about-pic-secondary"
             />
           </div>
           <div class="about-info">
