--- a/index.html
+++ b/index.html
@@ -192,6 +192,21 @@
             <div class="timeline-item">
               <div class="timeline-content">
                 <div class="company-info">
+                  <h3>Andorix Inc.</h3>
+                  <p class="role">Client Support Engineer</p>
+                  <p class="duration">May 2021 – Aug 2021</p>
+                </div>
+                <ul class="achievements">
+                  <li>Developed SQL queries and dashboards using Power BI and the C360 analytics platform to enable real-time insights for product features and strategic planning</li>
+                  <li>Created custom reports, performed routine backups, and managed support tickets using ConnectWise, reducing resolution time by 40%</li>
+                  <li>Configured, circuited, and tested ONT/OLT devices, optimizing building operations in smart infrastructure</li>
+                </ul>
+              </div>
+            </div>
+            
+            <div class="timeline-item">
+              <div class="timeline-content">
+                <div class="company-info">
                   <h3>YouTube Creator</h3>
                   <p class="role">Technical Content Creator</p>
                   <p class="duration">May 2020 – Present</p>
