--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <img src="./assets/james_profile_pic.png" alt="James Park profile picture">
         </div>
         <div class="section__text">
-            <p class="section__text__p1">Hello, I'm</p>
+            <p class="section__text__p1">Hi, I'm</p>
             <h1 class="title">James Park</h1>
             <p class="section__text__p2">AI Coding Expert & <br> Software Engineer</p>
             <div class="btn-container">
