--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 training AI models across multiple programming languages and developing scalable software solutions.
               </p>
               <p>
-                With a <strong>B.Eng. from McMaster University</strong> and experience at companies like SOTI Inc., 
+                With a <strong>Bachelors of Software and Biomedical Engineering Co-op from McMaster University</strong> and experience at companies like SOTI Inc., 
                 I bring both technical expertise and practical industry knowledge. I have a proven track record of reducing 
                 deployment times by 200% and creating solutions that serve thousands of users worldwide.
               </p>
@@ -167,9 +167,9 @@
                   <p class="duration">Aug 2024 – Present</p>
                 </div>
                 <ul class="achievements">
-                  <li>Train Gen AI models across Java, Python, JavaScript/TypeScript, C++, Swift, and Verilog</li>
-                  <li>Review code and debug AI-generated solutions with RLHF for accuracy and scalability</li>
-                  <li>Support backend and full-stack development initiatives</li>
+                  <li>Trained Gen AI models across Java, Python, JavaScript/TypeScript, C++, Swift, and Verilog</li>
+                  <li>Reviewed code and debugged AI-generated solutions with RLHF for accuracy and scalability</li>
+                  <li>Supported backend and full-stack development initiatives</li>
                 </ul>
               </div>
             </div>
@@ -182,7 +182,7 @@
                   <p class="duration">May 2022 – Apr 2024</p>
                 </div>
                 <ul class="achievements">
-                  <li>Led technical demos for 50+ enterprise customers with Azure, AWS, and SQL servers</li>
+                  <li>Led technical demos and POCs for 50+ enterprise customers with Azure, AWS, and SQL servers</li>
                   <li>Developed PowerShell tools and custom MQTT utilities, reducing deployment time by 200%</li>
                   <li>Created internal SharePoint solutions for Sales and Product teams</li>
                 </ul>
@@ -490,7 +490,7 @@
               <div class="chatbot-avatar">JP</div>
               <div class="chatbot-info">
                 <h4>James Park AI Assistant</h4>
-                <p>Ask me about my experience, skills, or projects!</p>
+                <p>Ask me about his experience, skills, projects, languages, hobbies & more!</p>
               </div>
             </div>
             <button id="chatbot-close" class="chatbot-close">
@@ -504,7 +504,7 @@
             <div class="message bot-message">
               <div class="message-avatar">JP</div>
               <div class="message-content">
-                <p>Hello! I'm James's AI assistant. I can answer questions about his experience, skills, projects, and background. What would you like to know?</p>
+                <p>Hello! I'm James's AI assistant. I can answer questions about his professional experience, technical skills, projects, personal background, hobbies, and more. What would you like to know about him?</p>
               </div>
             </div>
           </div>
@@ -514,7 +514,9 @@
               <button class="suggestion-btn" data-question="What is James's experience?">Experience</button>
               <button class="suggestion-btn" data-question="What programming languages does James know?">Skills</button>
               <button class="suggestion-btn" data-question="Tell me about James's projects">Projects</button>
-              <button class="suggestion-btn" data-question="What is James's educational background?">Education</button>
+              <button class="suggestion-btn" data-question="What languages does James speak?">Languages</button>
+              <button class="suggestion-btn" data-question="What are James's hobbies?">Hobbies</button>
+              <button class="suggestion-btn" data-question="What is James's real name?">Name</button>
             </div>
             <div class="chatbot-input-area">
               <input type="text" id="chatbot-input" placeholder="Ask me anything about James..." maxlength="500">
