--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
       <section id="contact">
         <h1 class="title">Contact Me</h1>
         <div class="contact-info-upper-container">
-          <div class="contact-info-container">
+          <div class="contact-info-container" onclick="window.open('mailto:jamesparkgh@gmail.com')">
             <img
               src="./assets/email.png"
               alt="Email icon"
@@ -462,13 +462,13 @@
             />
             <p><a href="mailto:jamesparkgh@gmail.com">jamesparkgh@gmail.com</a></p>
           </div>
-          <div class="contact-info-container">
+          <div class="contact-info-container" onclick="window.open('https://www.linkedin.com/in/jamesparkg/', '_blank')">
             <img
               src="./assets/linkedin.png"
               alt="LinkedIn icon"
               class="icon contact-icon"
             />
-            <p><a href="https://www.linkedin.com/in/jamesparkg/">LinkedIn</a></p>
+            <p><a href="https://www.linkedin.com/in/jamesparkg/" target="_blank">LinkedIn</a></p>
           </div>
         </div>
       </section>
