--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <p>Enterprise Clients Served</p>
               </div>
               <div class="stat-item">
-                <h3>600K+</h3>
+                <h3>1M+</h3>
                 <p>YouTube Tutorial Views</p>
               </div>
             </div>
@@ -212,7 +212,7 @@
                   <p class="duration">May 2020 – Present</p>
                 </div>
                 <ul class="achievements">
-                  <li>Created programming tutorials reaching 600,000+ views</li>
+                  <li>Created programming tutorials reaching 1M+ views</li>
                   <li>Built audience of 10,000+ monthly users</li>
                   <li>Expertise in Adobe Premiere Pro, Photoshop, DaVinci Resolve</li>
                 </ul>
