--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             </div>
             <div class="about-description">
               <p>
-                I am a passionate <strong>Software Engineer and AI Coding Expert</strong> with expertise in full-stack development, 
+                I am currently a <strong>Forward Deployed Engineer at Aircall</strong> with expertise in full-stack development, 
                 machine learning, and enterprise solutions. Currently working as an AI Trainer at Outlier, I specialize in 
                 training AI models across multiple programming languages and developing scalable software solutions.
               </p>
