--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="section__text">
             <p class="section__text__p1">Hi, I'm</p>
             <h1 class="title">James Park</h1>
-            <p class="section__text__p2">AI Coding Expert & <br> Software Engineer</p>
+            <p class="section__text__p2">AI Forward Deployed Engineer & <br> Software Engineer</p>
             <div class="btn-container">
                 <button class="btn btn-primary" 
                 onclick="window.open('./assets/james_park_resume.pdf')">
@@ -114,12 +114,13 @@
             </div>
             <div class="about-description">
               <p>
-                I am currently a <strong>Forward Deployed Engineer at Aircall</strong> with expertise in full-stack development, 
-                machine learning, and enterprise solutions. Currently working as an AI Trainer at Outlier, I specialize in 
-                training AI models across multiple programming languages and developing scalable software solutions.
+                I am currently a <strong>Forward Deployed Engineer at Aircall</strong>, an AI-powered customer communications platform 
+                used by 22,000+ companies worldwide. I specialize in designing and deploying scalable AI solutions that connect innovative 
+                AI Voice Agent technology with real-world customer workflows. With expertise in low-code integrations and full-stack development, 
+                I turn complex technical challenges into seamless, production-ready solutions.
               </p>
               <p>
-                With a <strong>Bachelors of Software and Biomedical Engineering Co-op from McMaster University</strong> and experience at companies like SOTI Inc., 
+                With a <strong>Bachelors of Software and Biomedical Engineering Co-op from McMaster University</strong> and experience at companies like SOTI, Outlier, Andorix,
                 I bring both technical expertise and practical industry knowledge. I have a proven track record of reducing 
                 deployment times by 200% and creating solutions that serve thousands of users worldwide.
               </p>
@@ -162,9 +163,26 @@
             <div class="timeline-item">
               <div class="timeline-content">
                 <div class="company-info">
+                  <h3>Aircall</h3>
+                  <p class="role">Forward Deployed Engineer</p>
+                  <p class="duration">Jan 2026 – Present</p>
+                </div>
+                <ul class="achievements">
+                  <li>Own end-to-end delivery of technically sound, low-code AI solutions for enterprise customers</li>
+                  <li>Design and deploy integrations using Zapier, Make, n8n with CRMs and communication tools</li>
+                  <li>Lead cross-functional projects with Product, Engineering, and Customer Success to deliver scalable AI Agent deployments</li>
+                  <li>Drive revenue and adoption of AI Voice Agent technology across SMB customer base</li>
+                  <li>Build reusable frameworks and templates to accelerate AI deployment processes</li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="timeline-item">
+              <div class="timeline-content">
+                <div class="company-info">
                   <h3>Outlier</h3>
                   <p class="role">AI Coding Expert & AI Trainer</p>
-                  <p class="duration">Aug 2024 – Present</p>
+                  <p class="duration">Jan 2024 – Feb 2026</p>
                 </div>
                 <ul class="achievements">
                   <li>Trained Gen AI models across Java, Python, JavaScript/TypeScript, C++, Swift, and Verilog</li>
